# YellowBeltStepik

./: .gitignore  CMakeLists.txt  refactor.cpp  test_runner.h
average_temp2/: Average temperature_solution.cpp  CMakeLists.txt  average_temp2.cpp
blocks_mass/: CMakeLists.txt  block_mass_solution.cpp  blocks_mass.cpp
class_declare/: CMakeLists.txt  rectangle.h  solution.cpp
decompose/: CMakeLists.txt  correct.cpp  starter.cpp
decompose2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
demographic_stats/: CMakeLists.txt  demographic.cpp  demographic_solution.cpp  structs.h
matrix_sum/: CMakeLists.txt  matrix_sum.cpp  matrix_sum_solution.cpp
merge_sort1/: CMakeLists.txt  merge_sort1_solution.cpp
merge_sort2/: CMakeLists.txt  merge_sort2.cpp
permutations/: CMakeLists.txt  permutations.cpp
personal_budget_starter/: CMakeLists.txt  personal_budget_starter.cpp
phone_number/: CMakeLists.txt  phone_number.cpp  phone_number.h
ref_to_element/: CMakeLists.txt  ref_to_element.cpp  ref_to_element_solution.cpp
region_bd/: CMakeLists.txt  region_bd.cpp  region_bd_solution.cpp
remove_duplicates/: CMakeLists.txt  remove_duplicates.cpp  solution.cpp
set_part/: CMakeLists.txt  set_part.cpp  solution.cpp
split_into_words/: CMakeLists.txt  split_into_words.cpp
square/: CMakeLists.txt  square.cpp  square_solution.cpp
sum_reverse_sort/: CMakeLists.txt  solution.cpp  sum_reverse_sort.cpp
task_tracker/: CMakeLists.txt  task_tracker.cpp
test_equation/: test_equation.cpp
test_palindrom/: CMakeLists.txt  (+1 more)
(+10 files in other folders)
