cmake_minimum_required(VERSION 3.8)

project(YellowBeltStepik)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_subdirectory(matrix_sum)
add_subdirectory(average_temp2)
add_subdirectory(blocks_mass)
add_subdirectory(region_bd)
add_subdirectory(task_tracker)
add_subdirectory(square)
add_subdirectory(ref_to_element)
add_subdirectory(decompose)
add_subdirectory(unit_test_framework)
add_subdirectory(test_equation)
add_subdirectory(test_person)
add_subdirectory(test_rational)
add_subdirectory(test_palindrom)
add_subdirectory(sum_reverse_sort)
add_subdirectory(phone_number)
add_subdirectory(class_declare)
add_subdirectory(decompose2)
add_subdirectory(vector_part)